[tool.poetry]
name = "Posr>"
version = "0.3.5"
description = "A OSR tool for performing Domain, IP, and File Hash analysis"
authors = ["Casey Mauldin <dw4pres@gmail.com>"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/2minCS/Posr"
"Bug Tracker" = "https://github.com/2minCS/Posr/issues"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = {git = "https://github.com/noneofyourbusiness1415252/replit-py"}
Flask = "^2.2.0"
configparser = "^5.3.0"
requests = "^2.28.1"
click = "^8.1.3"
click-shell = "^2.1"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
